# Fair-Commander

./: .gitignore  README.md  ban_list.json  deck.json  fair_commander.py  generate_database.py  main.py  pyproject.toml
